--- a/Final_Project/write/report.tex
+++ b/Final_Project/write/report.tex
@@ -13,7 +13,7 @@
 \usepackage{url} 
 \doublespacing
 \begin{document}
-\title{\LARGE \textbf{ Assessing the Impact of Anthropogenic and Natural Stressors on Motile Diversity in Coral Reef Ecosystems} \\
+\title{\LARGE{Assessing the Impact of Anthropogenic and Marine Environmental on Motile Species Diversity in Coral Reef Ecosystems} \\
 \vspace*{20mm}}
 
 \author{\textbf{Pu Zhao} \\Email: pu.zhao23@imperial.ac.uk \vspace*{4mm}}
@@ -26,7 +26,7 @@
     \maketitle
       
     \begin{center}
-      \textbf{
+      \textbf{A thesis submitted in partial fulfilment of the requirements for the degree of Master of Science at Imperial College London \\ \vspace*{2mm}
       Submitted for the MSc in Computational Methods in Ecology and Evolution} 
 
     \end{center}
