--- a/Final_Project/write/report.tex
+++ b/Final_Project/write/report.tex
@@ -11,7 +11,7 @@
 \usepackage{booktabs}
 \usepackage{natbib}
 \usepackage{url} 
-\doublespacing
+\onehalfspacing
 \begin{document}
 \title{\LARGE{Assessing the Impact of Anthropogenic and Marine Environmental on Motile Species Diversity in Coral Reef Ecosystems} \\
 \vspace*{20mm}}
